# tetros

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  limine.conf  linker.ld
include/driver/: cmos.hpp  keyboard.hpp  screen.hpp  serial.hpp  sound.hpp  timer.hpp
include/driver/limine/: limine_requests.hpp
include/kernel/: idt.hpp  multiboot.h  paging.hpp  system.hpp
include/lib/: format.hpp  math.hpp  mem.hpp  string.hpp
include/tetris/: tetris.hpp
kernel/include/: uacpi_libc.h
kernel/include/driver/: acpi.hpp  pci.hpp  pic.hpp  ps2.hpp  serial.hpp  timer.hpp
kernel/include/driver/limine/: limine.h  limine_requests.hpp
kernel/include/driver/ps2/: keyboard.hpp  ps2.hpp
kernel/include/kernel/: cmdline.hpp  irq.hpp  isrs.hpp  system.hpp
kernel/include/lib/: font8x8.hpp  format.hpp  log.hpp  rand.hpp  string.hpp
kernel/include/memory/: mem.hpp  paging.hpp
kernel/include/tetris/: color_utils.hpp  tetris.hpp
kernel/src/arch/x86_64/: gdt.asm  gdt.cpp  idt.cpp  irq.cpp  isrs.cpp
kernel/src/driver/: acpi.cpp  cmos.cpp  pci.cpp  pic.cpp  ps2.cpp  screen.cpp  serial.cpp  sound.cpp  timer.cpp
kernel/src/driver/limine/: limine_requests.cpp
kernel/src/driver/ps2/: keyboard.cpp  ps2.cpp
kernel/src/game/: tetris.cpp
kernel/src/kernel/: cmdline.cpp  kernel_api.cpp  main.cpp  system.cpp
kernel/src/lib/: format.cpp  log.cpp  operators.cpp  ssp.cpp  string.cpp
kernel/src/memory/: mem.cpp  paging.cpp
scripts/: gdb.sh  run.sh
src/arch/x86_64/: idt.cpp  irq.asm  isr_stubs.asm  isrs.cpp  paging.cpp
src/boot/: boot.asm  boot64.asm
src/driver/: cmos.cpp  keyboard.cpp  screen.cpp  serial.cpp  sound.cpp  timer.cpp
src/driver/limine/: limine_requests.cpp
src/game/: tetris.cpp
src/kernel/: main.cpp  system.cpp
src/lib/: format.cpp  math.cpp  mem.cpp  operators.cpp  rand.cpp  string.cpp
